--- a/_config.yml
+++ b/_config.yml
@@ -59,6 +59,20 @@ sharing:
   addthis:
     id: "ra-6141044a78e39f52"
 
+defaults:
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: article
+      sharing: true
+      license: true
+      aside:
+        toc: true
+      show_edit_on_github: true
+      show_subscribe: true
+      pageview: true
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
