--- a/.github/workflows/run-ansible-playbook.yml
+++ b/.github/workflows/run-ansible-playbook.yml
@@ -5,7 +5,7 @@ on: push
 
 jobs:
   run-playbooks:
-    runs-on: self-hosted
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
     - name: Run Ansible Playbook to deploy my blog
