deploy via github actions

--- a/.github/workflows/run-ansible-playbook.yml
+++ b/.github/workflows/run-ansible-playbook.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-20.04
     defaults:
       run:
-        working-directory: ansibl
+        working-directory: ansible
     steps:
     - uses: actions/checkout@v2
     - name: Run Ansible Playbook to deploy my blog
