--- a/.github/workflows/run-ansible-playbook.yml
+++ b/.github/workflows/run-ansible-playbook.yml
@@ -11,6 +11,10 @@ jobs:
         working-directory: ansible
     steps:
     - uses: actions/checkout@v2
+    - name: Install SSH Key
+      uses: shimataro/ssh-key-action@v2
+      with:
+        key: ${{ secrets.SSH_PRIVATE_KEY }} 
     - name: Run Ansible Playbook to deploy my blog
       run: ansible-playbook --verbose deploy.yaml
 
