--- a/.github/workflows/run-ansible-playbook.yml
+++ b/.github/workflows/run-ansible-playbook.yml
@@ -15,6 +15,9 @@ jobs:
       uses: shimataro/ssh-key-action@v2
       with:
         key: ${{ secrets.SSH_PRIVATE_KEY }} 
+        known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
+    - name: Adding Known Hosts
+      run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts        
     - name: Run Ansible Playbook to deploy my blog
       run: ansible-playbook --verbose deploy.yaml
 
