--- a/ansible/templates/jekyll.service
+++ b/ansible/templates/jekyll.service
@@ -8,7 +8,7 @@ After=syslog.target network.target
 User=root
 Type=simple
 WorkingDirectory=/home/deployer/my-blog
-ExecStart=/usr/local/bin/jekyll serve  --host 0.0.0.0 --watch --port 80 
+ExecStart=/usr/local/bin/jekyll serve  --host 0.0.0.0 --port 80 
 ExecStop=/usr/bin/pkill -f jekyll
 Restart=always
 TimeoutStartSec=60
