--- a/_config.yml
+++ b/_config.yml
@@ -106,6 +106,9 @@ gzip:
     - '.css'
     - '.js'
 
+sass:
+  style: compressed
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
