--- a/ansible/templates/nginx.cfg
+++ b/ansible/templates/nginx.cfg
@@ -1,9 +1,16 @@
 server {    
+    gzip on;
+    gzip_types      text/plain application/xml;
+    gzip_proxied    no-cache no-store private expired auth;
+    gzip_min_length 1000;
+
     listen 80 default_server;
     listen [::]:80 default_server;
     root /home/deployer/my-blog/_site;
     server_name _;
     location / {
-            try_files $uri $uri/ =404;
+    	gzip_static on;
+        
+        try_files $uri $uri/ =404;
     }
 }
