enable assests cache

--- a/ansible/templates/nginx.cfg
+++ b/ansible/templates/nginx.cfg
@@ -13,4 +13,8 @@ server {
         
         try_files $uri $uri/ =404;
     }
+
+    location ~*  \.(jpg|jpeg|png|gif|ico|css|js)$ {
+        expires 15d;
+    }
 }
