--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -48,3 +48,8 @@ header:
       fr-LU   : *FR
       # @end locale config
     url: /about.html
+  - titles:
+      # @start locale config
+      en: &EN       Support Gaza Refugees 
+      # @end locale config
+    url: /gaza-refugees.html
