--- a/.github/workflows/run-ansible-playbook.yml
+++ b/.github/workflows/run-ansible-playbook.yml
@@ -14,6 +14,10 @@ jobs:
         working-directory: ansible
     steps:
     - uses: actions/checkout@v2
+    - name: List files in the repository
+      run: |
+        ls ${{ github.workspace }}
+        - run: echo "🍏 This job's status is ${{ job.status }}."
     - name: Install SSH Key
       uses: shimataro/ssh-key-action@v2
       with:
