--- a/.github/workflows/run-ansible-playbook.yml
+++ b/.github/workflows/run-ansible-playbook.yml
@@ -22,8 +22,8 @@ jobs:
 #    - name: Adding Known Hosts
 #      run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts        
     - name: Run Ansible Playbook to deploy my blog
-      with:
-        workspace_path: ${{ github.workspace }}
+      env:
+        WORKSPACE_DIR: ${{ github.workspace }}
       run: ansible-playbook --verbose deploy.yaml
 
           
