--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -3,6 +3,9 @@ inventory = hosts
 host_key_checking = False
 remote_user = deployer
 
+[ssh_connection]
+ssh_args = -o ForwardAgent=yes 
+
 [privilege_escalation]
 become = yes
 become_method = sudo
