--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,11 +2,13 @@ version: '2'
 
 services:
   jekyll:
-    image: jekyll/jekyll:4.2.0
-    command: jekyll serve --watch --force_polling --verbose
+    image: jekyll/jekyll:4.2.2
+    command: jekyll serve --watch --force_polling --verbose --trace
     ports:
-      - 4000:4000
+      - "4000:4000"
     environment:
-      JEKYLL_ENV: "production"  
+      JEKYLL_ENV: "production"
     volumes:
       - .:/srv/jekyll
+      - type: tmpfs
+        target: /srv/jekyll/.jekyll-cache
